--- a/index.html
+++ b/index.html
@@ -1,15 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css" >
     <meta charset="UTF-8">
+    <script src="script.js" defer></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-    <title>My portfolio</title>
+    <title>Amir Suljkanović</title>
 </head>
 <body class="main-body">
+    <div class="socials">
+        <a href="#" target="_blank"
+          ><img
+            src="./styles/social-photos/tw.png"
+            alt="Twitter"
+            loading="lazy"
+            class="socicon"
+        /></a>
+        <a href="#" target="_blank"
+          ><img
+            src="./styles/social-photos/ig.png"
+            alt="Instagram"
+            loading="lazy"
+            class="socicon"
+        /></a>
+        <a href="#" target="_blank"
+          ><img
+            src="./styles/social-photos/lnkd.png"
+            alt="Linkedin"
+            loading="lazy"
+            class="socicon"
+        /></a>
+        <a href="#" target="_blank"
+          ><img src="./styles/social-photos/gith.png" alt="Github" class="socicon"
+        /></a>
+    </div>
     <div class="containerNav">
         <div class="picture-header">
             <a href="index.html">
@@ -80,6 +107,12 @@
             </div>
         </div>
     </div>
-    
+    <footer>
+    <i class="scroll-up" id="scroll-up"><img
+        src="./styles/uparrow.png"
+        class="socicon up-arrow"
+        alt="scroll-up"
+    /></i>
+    </footer>
 </body>
 </html>
