--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
 </head>
 <body class="main-body">
     <div class="socials">
-        <a href="#" target="_blank"
+        <a href="https://www.memeternet.com" target="_blank"
           ><img
             src="./styles/social-photos/tw.png"
             alt="Twitter"
             loading="lazy"
             class="socicon"
         /></a>
-        <a href="#" target="_blank"
+        <a href="https://www.instagram.com/suljkanovic.amir/" target="_blank"
           ><img
             src="./styles/social-photos/ig.png"
             alt="Instagram"
             loading="lazy"
             class="socicon"
         /></a>
-        <a href="#" target="_blank"
+        <a href="https://www.linkedin.com/in/amir-suljkanovi%C4%87-843230209/" target="_blank"
           ><img
             src="./styles/social-photos/lnkd.png"
             alt="Linkedin"
             loading="lazy"
             class="socicon"
         /></a>
-        <a href="#" target="_blank"
+        <a href="https://github.com/SuljkanovicAmir" target="_blank"
           ><img src="./styles/social-photos/gith.png" alt="Github" class="socicon"
         /></a>
     </div>
