--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class="main-body">
     <div class="socials">
-        <a href="https://www.twitter.com/memeternet.com" target="_blank"
+        <a href="https://twitter.com/memeternet" target="_blank"
           ><img
             src="./styles/social-photos/tw.png"
             alt="Twitter"
