--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-
     <title>Amir Suljkanović</title>
 </head>
 <body class="main-body">
@@ -44,9 +43,14 @@
         </div>
         <div class="nav-bar">
         <nav>
-            <a href="#mainsection">About</a>
-            <a href="#projectsection">Projects</a>
-            <a href="#contactsection">Contact</a>
+            <ul class="navigation">
+                <li><a href="#mainsection">About</a></li>
+                <li><a href="#projectsection">Projects</a></li>
+                <li><a href="#contactsection">Contact</a></li>
+            </ul>
+            <button class="burger-menu" id="burger-menu">
+                <img src="/styles/burger.png">
+            </button>
         </nav>
         </div>
     </div>
