--- a/index.html
+++ b/index.html
@@ -10,32 +10,7 @@
     <title>Amir Suljkanović</title>
 </head>
 <body class="main-body">
-    <div class="socials">
-        <a href="https://twitter.com/memeternet" target="_blank"
-          ><img
-            src="./styles/social-photos/tw.png"
-            alt="Twitter"
-            loading="lazy"
-            class="socicon"
-        /></a>
-        <a href="https://www.instagram.com/suljkanovic.amir/" target="_blank"
-          ><img
-            src="./styles/social-photos/ig.png"
-            alt="Instagram"
-            loading="lazy"
-            class="socicon"
-        /></a>
-        <a href="https://www.linkedin.com/in/amir-suljkanovi%C4%87-843230209/" target="_blank"
-          ><img
-            src="./styles/social-photos/lnkd.png"
-            alt="Linkedin"
-            loading="lazy"
-            class="socicon"
-        /></a>
-        <a href="https://github.com/SuljkanovicAmir" target="_blank"
-          ><img src="./styles/social-photos/gith.png" alt="Github" class="socicon"
-        /></a>
-    </div>
+   
     <div class="containerNav">
         <div class="picture-header">
             <a href="index.html">
@@ -111,7 +86,34 @@
             </div>
         </div>
     </div>
-    <footer>
+    
+    <footer class="footer">
+        <div class="socials">
+            <a href="https://twitter.com/memeternet" target="_blank"
+              ><img
+                src="./styles/social-photos/tw.png"
+                alt="Twitter"
+                loading="lazy"
+                class="socicon"
+            /></a>
+            <a href="https://www.instagram.com/suljkanovic.amir/" target="_blank"
+              ><img
+                src="./styles/social-photos/ig.png"
+                alt="Instagram"
+                loading="lazy"
+                class="socicon"
+            /></a>
+            <a href="https://www.linkedin.com/in/amir-suljkanovi%C4%87-843230209/" target="_blank"
+              ><img
+                src="./styles/social-photos/lnkd.png"
+                alt="Linkedin"
+                loading="lazy"
+                class="socicon"
+            /></a>
+            <a href="https://github.com/SuljkanovicAmir" target="_blank"
+              ><img src="./styles/social-photos/gith.png" alt="Github" class="socicon"
+            /></a>
+        </div>    
     <i class="scroll-up" id="scroll-up"><img
         src="./styles/uparrow.png"
         class="socicon up-arrow"
