--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     
     <footer class="footer">
         <div class="socials">
-            <a href="https://twitter.com/memeternet" target="_blank"
+            <a href="https://twitter.com/" target="_blank"
               ><img
                 src="./styles/social-photos/tw.png"
                 alt="Twitter"
