--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
         class="socicon up-arrow"
         alt="scroll-up"
     /></i>
-    </footer>
+    <div class="coffee-container">
+        <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-width="200px" data-name="bmc-button" data-slug="suljkanovicamir" data-color="#827ffe" data-emoji="☕"  data-font="Poppins" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#ffffff" data-coffee-color="#FFDD00" ></script>
+    <style>
+    
+    </style>
+    </div>
+</footer>
 </body>
 </html>
