change to ko-fi button

--- a/index.html
+++ b/index.html
@@ -120,10 +120,7 @@
         alt="scroll-up"
     /></i>
     <div class="coffee-container">
-        <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-width="200px" data-name="bmc-button" data-slug="suljkanovicamir" data-color="#827ffe" data-emoji="☕"  data-font="Poppins" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#ffffff" data-coffee-color="#FFDD00" ></script>
-    <style>
-    
-    </style>
+        <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#827ffe', 'V7V77BFNM');kofiwidget2.draw();</script> 
     </div>
 </footer>
 </body>
