--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <title>Amir Suljkanović</title>
+    <link rel="shortcut icon" href="styles/favicon1.ico"/>
 </head>
 <body class="main-body">
    
