--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <title>Amir Suljkanović</title>
     <link rel="shortcut icon" href="styles/favicon1.ico"/>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7131647528461969"
+     crossorigin="anonymous"></script>
 </head>
 <body class="main-body">
    
