--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <div id="mainsection" class='main-section'>
         <div class='main-container'>
-          <h1>Hello, I'm Amir Suljkanović.<br> I'm a web developer.</h1>
+          <h1 id="mytitle"></h1>
           <p>I have 1 year experience at HTML, CSS and Javascript. <br>
             I value honesty and integrity above all else. These ideals <br> guide my approach to problem solving and life in general. </p>
         </div>
