--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
     <div id="mainsection" class='main-section'>
         <div class='main-container'>
           <h1 id="mytitle"></h1>
-          <p>I have 1 year experience at HTML, CSS and Javascript. <br>
-            I value honesty and integrity above all else. These ideals <br> guide my approach to problem solving and life in general. </p>
+          <p id="myp"></p>
         </div>
     </div>
     <div id="projectsection" class="project-section">
