--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="nav-bar">
         <nav>
             <ul class="navigation">
-                <li><a href="#mainsection">About</a></li>
-                <li><a href="#projectsection">Projects</a></li>
-                <li><a href="#contactsection">Contact</a></li>
+                <li><a class="myproject" href="#mainsection">About</a></li>
+                <li><a class="myproject" href="#projectsection">Projects</a></li>
+                <li><a class="myproject" href="#contactsection">Contact</a></li>
             </ul>
             <button class="burger-menu" id="burger-menu">
                 <img src="/styles/burger.png">
@@ -48,7 +48,7 @@
             </div>
             <div class="project">
                 <a target="_blank" href="#">
-                <img class="img" src="./styles/project-photos/landing.png"></a>
+                <img class="img" src="./styles/project-photos/landing.jpg"></a>
                 <div class="text">The Odin Project - Landing page</div>
             </div>
             <div class="project">
