Changing forms backend

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <link rel="shortcut icon" href="styles/favicon1.ico"/>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7131647528461969"
      crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+        emailjs.init("user_2UTWj4IrdGhsK1zHytJy4");
+        })();
+    </script>
 </head>
 <body class="main-body">
    
@@ -77,7 +83,7 @@
 				    </div>  
                     
                     <div class="container-btn">
-                        <button class="form-btn">
+                        <button onclick="sendMail()" class="form-btn">
                             <span>
                                 <i class="fa fa-paper-plane-o m-r-6" aria-hidden="true"></i>
                                 Send
