--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <h1 class="form-title">Contact Me</h1>
         <div class="contact-container">
             <div class="form-container">
-               <form action="https://formsubmit.co/suljkanovic.amir@hotmail.com" method="POST" class="contact-form">
+               <form  class="contact-form">
                     <div class="contact-input validate-input" data-validate="Please enter your name">
 					    <input class="input100" type="text" name="name" placeholder="Full Name">
 					    <span class="focus-input"></span>
