--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
         <div class="title2"><h1>My projects.</h1></div>
         <div class="project-container">
             <div class="project">
-                <a target="_blank"  href="https://weather.com/">
+                <a id ="atag" target="_blank" >
                 <img class="img" src="./styles/project-photos/weather.jpg"></a>
                 <div class="text">CS50 - Weather app project</div>
             </div>
             <div class="project">
-                <a target="_blank" href="#">
+                <a id="atag" target="_blank" >
                 <img class="img" src="./styles/project-photos/landing.jpg"></a>
                 <div class="text">The Odin Project - Landing page</div>
             </div>
             <div class="project">
-                <a target="_blank" href="#">
+                <a id ="atag" target="_blank" >
                 <img class="img" src="./styles/project-photos/finance.jpg"></a>
                 <div class="text">CS50 - Finance project</div>
             </div>
