--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
         })();
     </script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PLW0L2N6QN"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-PLW0L2N6QN');
+    </script>
 
 </head>
 <body class="main-body">
