Adding Etch-a-sketch project to portolio

--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
         <div class="title2"><h1>My projects.</h1></div>
         <div class="project-container">
             <div class="project">
-                <a id ="atag" target="_blank" >
+                <a id ="atag" href="https://github.com/SuljkanovicAmir/weatherapp" target="_blank" >
                 <img class="img" src="./styles/project-photos/weather.jpg"></a>
                 <div class="text">CS50 - Weather app project</div>
             </div>
             <div class="project">
-                <a id="atag" target="_blank" >
-                <img class="img" src="./styles/project-photos/landing.jpg"></a>
-                <div class="text">The Odin Project - Landing page</div>
+                <a id="atag" href="https://amir-etch-a-sketch.netlify.app/" target="_blank" >
+                <img class="img" src="styles/sketch.jpg"></a>
+                <div class="text">Etch-a-sketch project</div>
             </div>
             <div class="project">
                 <a id ="atag" target="_blank" >
