Project photo changes

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
             <div class="project">
                 <a id="atag" href="https://amir-etch-a-sketch.netlify.app/" target="_blank" >
-                <img class="img" src="styles/sketch.jpg"></a>
+                <img class="img" src="styles/sketch2.jpg"></a>
                 <div class="text">Etch-a-sketch project</div>
             </div>
             <div class="project">
