--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         gtag('js', new Date());
         gtag('config', 'G-PLW0L2N6QN');
     </script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body class="main-body">
    
     <div class="containerNav">
-        <div class="picture-header">
+        <div class="picture-header show">
             <a href="index.html">
             <img class="picture-header" src="./styles/logo.png"></a>
         </div>
@@ -50,7 +50,7 @@
     <div id="mainsection" class='main-section'>
         <div class='main-container'>
           <h1 id="mytitle"></h1>
-          <p id="myp"></p>
+          <p id="myp">I have 1 year experience at HTML, CSS and Javascript. <br>I value honesty and integrity above all else. These ideals <br>guide my approach to problem solving and life in general</p>
         </div>
     </div>
     <div id="projectsection" class="project-section">
