Scroll-up button hidden, but shows up when you scroll

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
             <a href="https://github.com/SuljkanovicAmir" target="_blank"
               ><img src="./styles/social-photos/gith.png" alt="Github" class="socicon"
             /></a>
-        </div>    
-    <i class="scroll-up" id="scroll-up"><img
+        </div class="fade-in">    
+    <i class="scroll-up fade-in" id="scroll-up"><img
         src="./styles/uparrow.png"
         class="socicon up-arrow"
         alt="scroll-up"
