Updating project section

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                 <div class="text">Etch-a-sketch project</div>
             </div>
             <div class="project">
-                <a id ="atag" target="_blank" >
-                <img class="img" src="./styles/project-photos/finance.jpg"></a>
-                <div class="text">CS50 - Finance project</div>
+                <a id="atag" target="_blank" href="https://amirlibrary.netlify.app/" >
+                <img class="img" src="./styles/project-photos/myLibrary.jpg"></a>
+                <div class="text">MyLibrary <br> project</div>
             </div>
         </div>
     </div>
