Redesign burger navbar

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   
     <link rel="stylesheet" href="styles/style.css" >
     <meta charset="UTF-8">
     <script src="script.js" defer></script>
@@ -28,7 +29,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body class="main-body">
-   
+ 
     <div class="containerNav">
         <div class="picture-header show">
             <a href="index.html">
@@ -37,6 +38,7 @@
         <div class="nav-bar">
         <nav>
             <ul class="navigation">
+                <li><img class="xbutton" src="styles/icons8-x-50.png"></li>
                 <li><a class="myproject" href="#mainsection">About</a></li>
                 <li><a class="myproject" href="#projectsection">Projects</a></li>
                 <li><a class="myproject" href="#contactsection">Contact</a></li>
