--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="styles/style.css" >
     <meta charset="UTF-8">
     <script src="script.js" defer></script>
+    <meta name="description" content="Amir's Portfolio">
+    <meta name="author" content="Amir Suljkanović">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -19,12 +21,13 @@
         })();
     </script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PLW0L2N6QN"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-215231034-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'G-PLW0L2N6QN');
+        gtag('config', 'UA-215231034-1');
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
