--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body class="main-body">
- 
+    <img src="styles/portofilio_photo.jpg" style="display: none;">
     <div class="containerNav">
         <div class="picture-header show">
             <a href="index.html">
