--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
     </script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-215231034-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PLW0L2N6QN"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
+         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'UA-215231034-1');
+
+        gtag('config', 'G-PLW0L2N6QN');
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
