--- a/index.html
+++ b/index.html
@@ -79,37 +79,37 @@
                 CSS and the basics of JavaScript, React and Python.</p>
         </div>
     </div>
-    <div id="projectsection" class="project-section " data-aos="fade-up">
+    <div id="projectsection" class="project-section " >
         <div class="title2 "><h1>my projects.</h1></div>
-        <div class="project-container" data-aos="fade-right" data-aos-delay="300">
-            <div class="project">
-                <a id ="atag" href="https://github.com/SuljkanovicAmir/weatherapp" target="_blank" >
-                <img class="img" src="./styles/project-photos/1200x630wa.png"></a>
-                <div class="text">Weather App
-                    <p class="pText ">CS50: Weather App project</p>
-                </div>
-            </div>
+        <div class="project-container" data-aos="fade-right" data-aos-delay="200">
             <div class="project">
                 <a id="atag" href="https://amir-etch-a-sketch.netlify.app/" target="_blank" >
                 <img class="img" src="styles/project-photos/restarurant.jpg"></a>
-                <div class="text">Restaurant
-                    <p class="pText ">The Odin Project: Restaurant webpage</p>
+                <div class="text"><a href="https://amirrestaurant.netlify.app/" target="_blank">Restaurant
+                    <p class="pText ">The Odin Project: Restaurant webpage</p></a>
+                </div>
+            </div>
+            <div class="project">
+                <a id ="atag" href="https://github.com/SuljkanovicAmir/weatherapp" target="_blank" >
+                <img class="img" src="./styles/project-photos/1200x630wa.png"></a>
+                <div class="text"> <a href="https://suljkanovicamir.github.io/vehicles/" target="_blank">Vehicle App
+                    <p class="pText ">React App with fake REST API</p></a>
                 </div>
             </div>
             <div class="project">
                 <a id="atag" target="_blank" href="https://amirlibrary.netlify.app/" >
                 <img class="img" src="./styles/project-photos/myLibrary.jpg"></a>
-                <div class="text">MyLibrary
-                    <p class="pText ">The Odin Project: MyLibrary App</p>
+                <div class="text"><a href="https://suljkanovicamir.github.io/tic-tac-toe/" target="_blank">Tic-Tac-Toe
+                    <p class="pText ">Tic-Tac-Toe App</p></a>
                 </div>
             </div>
         </div>
     </div>
-    <div id="contactsection" class="contact-section" data-aos="fade-up">
+    <div id="contactsection" class="contact-section">
         <div class="form-title ">
             <h1 >contact me.</h1>
         </div>
-        <div class="form-container">
+        <div class="form-container"  data-aos="fade-up" data-aos-delay="300">
                <h1>Get in touch</h1>
                <p class="form-text">I'm currently looking for a role as a front-end web developer. 
                    Whether you have a question, an offer or just want to chat, 
