--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="script.js" defer></script>
     <meta name="description" content="Amir's Portfolio">
     <meta name="author" content="Amir Suljkanović">
-    <meta name="image" property="og:image" content="https://imgur.com/Ea7vsaX">
+    <meta name="image" property="og:image" content="https://i.postimg.cc/hPKmKmR0/das.jpg">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
