Added different project

--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
                 </div>
             </div>
             <div class="project">
-                <a id="atag" target="_blank" href="https://amirlibrary.netlify.app/" >
+                <a id="atag" target="_blank" href="https://suljkanovicamir.github.io/weather/" >
                 <img class="img" src="./styles/project-photos/myLibrary.jpg"></a>
-                <div class="text"><a href="https://suljkanovicamir.github.io/tic-tac-toe/" target="_blank">Tic-Tac-Toe
-                    <p class="pText ">Tic-Tac-Toe App</p></a>
+                <div class="text"><a href="https://suljkanovicamir.github.io/tic-tac-toe/" target="_blank">The Weather App
+                    <p class="pText ">With webpack</p></a>
                 </div>
             </div>
         </div>
