--- a/index.html
+++ b/index.html
@@ -83,16 +83,16 @@
                 </div>
             </div>
             <div class="project">
-                <a id ="atag" href="https://github.com/SuljkanovicAmir/weatherapp" target="_blank" >
+                <a id ="atag" href="https://suljkanovicamir.github.io/vehicles/" target="_blank" >
                 <img class="img" src="./styles/project-photos/1200x630wa.png"></a>
-                <div class="text"> <a href="https://suljkanovicamir.github.io/vehicles/" target="_blank">Vehicle App
+                <div class="text"><a href="https://suljkanovicamir.github.io/vehicles/" target="_blank">Vehicle App
                     <p class="pText ">React App with fake REST API</p></a>
                 </div>
             </div>
             <div class="project">
                 <a id="atag" target="_blank" href="https://suljkanovicamir.github.io/weather/" >
                 <img class="img" src="./styles/project-photos/myLibrary.jpg"></a>
-                <div class="text"><a href="https://suljkanovicamir.github.io/tic-tac-toe/" target="_blank">The Weather App
+                <div class="text"><a href="https://suljkanovicamir.github.io/weather/" target="_blank">The Weather App
                     <p class="pText ">With webpack</p></a>
                 </div>
             </div>
