--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <a id="atag" target="_blank" href="https://suljkanovicamir.github.io/weather/" >
                 <img class="img" src="./styles/project-photos/myLibrary.jpg"></a>
                 <div class="text"><a href="https://suljkanovicamir.github.io/weather/" target="_blank">The Weather App
-                    <p class="pText ">With webpack</p></a>
+                    <p class="pText ">The Odin Project: Weather App</p></a>
                 </div>
             </div>
         </div>
